# coreason-foundry

./: AGENTS.md  LICENSE  NOTICE  README.md  The_Architecture_and_Utility_of_coreason_foundry.md  mkdocs.yml  pyproject.toml  requirements.md
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 1a2b3c4d5e6f_create_drafts_table.py  31c9a05e0528_add_scratchpad_to_drafts.py  42d9e05e0639_add_tools_to_drafts.py  759679af095f_create_projects_table.py
docs/: architecture.md  coreason_manifest_integration.md  index.md  kernel_recommendations.md  product_requirements.md  prompt_refinery.md  usage.md  vignette.md
docs/architecture/: manifest_integration.md
docs/changes/: release_0_3_1.md
src/coreason_foundry/: __init__.py  config.py  exceptions.py  interfaces.py  locking.py  main.py  managers.py  memory.py  models.py  presence.py  repositories.py
tests/: conftest.py  test_comment_edge.py  test_comment_models.py  test_draft_diffing.py  test_draft_diffing_edge.py  test_draft_manager.py  test_draft_manager_edge.py  test_draft_scratchpad.py  test_draft_scratchpad_edge.py  test_hashing.py  test_locking.py  test_locking_edge.py  test_locking_failure.py  test_locking_release_all.py  test_main.py  test_manifest_complex.py  test_manifest_edge.py  test_manifest_edge_cases.py  test_manifest_integration.py  test_memory_repo_edge.py  test_models.py  test_models_edge.py  test_presence.py  test_presence_edge.py  test_project_manager.py  test_project_manager_edge.py  test_publish_draft.py  test_refinery.py  test_repositories.py  test_repositories_comments.py  test_utils.py
tests/api/: test_app.py  test_dependencies.py  test_drafts.py  test_drafts_edge.py  test_projects.py  test_projects_edge.py  test_realtime.py  test_websockets.py
tests/db/: __init__.py  test_comment_persistence_edge.py  test_draft_persistence.py  test_draft_persistence_edge.py  test_draft_persistence_tools.py  test_persistence_complex.py  test_project_persistence.py  test_project_persistence_edge.py  (+2 more)
(+16 files in other folders)
