[tool.poetry]
name = "coreason_foundry"
version = "0.4.0"
description = "The Workspace Manager"
authors = ["Gowtham A Rao <gowtham.rao@coreason.ai>"]
license = "Prosperity-3.0"
readme = "README.md"
packages = [{include = "coreason_foundry", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12, <3.15"
loguru = "^0.7.2"
pydantic = "^2.12.5"
sqlalchemy = "^2.0.45"
asyncpg = "^0.31.0"
alembic = "^1.18.0"
pydantic-settings = "^2.12.0"
pytest-asyncio = "^1.3.0"
greenlet = "^3.3.0"
redis = "^7.1.0"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.8"
pre-commit = "^3.7.1"
pytest-cov = "^5.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.26"
aiosqlite = "^0.22.1"
pytest-asyncio = ">=0.23.0"
fakeredis = "^2.33.0"
lupa = "^2.6"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "coreason_foundry"
version = "0.3.1"
description = "The Workspace Manager"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Gowtham A Rao", email = "gowtham.rao@coreason.ai" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/CoReason-AI/coreason-foundry"
Repository = "https://github.com/CoReason-AI/coreason-foundry"
Documentation = "https://github.com/CoReason-AI/coreason-foundry"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disable_error_code = ["misc"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]
